[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skarv"
dynamic = ["version"]
description = "A single process, in-memory message queue written in python."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  {name = "Fredrik Olsson", email = "freol@outlook.com"}
]
dependencies = [
  "eclipse-zenoh >=1.0,<2.0"
]

[tool.setuptools_scm]